--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "fastclick": "^1.0.6",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue2-animate": "^1.0.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
